[package]
name = "flash_rbf"
version = "0.1.2"
edition = "2021"
description = "A blazingly fast radial basis function interpolator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flash_rbf"
crate-type = ["cdylib"]
test = true
doctest = false

[dependencies]
flash_rbf_core = { path = "flash_rbf_core" }
pyo3 = "0.19.0"
